Customizing paging and sorting response